--- a/css/styles.css
+++ b/css/styles.css
@@ -1,6 +1,6 @@
 .header h1{
-font-size: 60px;
-text-align: justify;
+font-size: 100px;
+text-align: center;
 font-family: monospace;
 font-style: italic;
 }
