--- a/css/styles.css
+++ b/css/styles.css
@@ -4,3 +4,10 @@ text-align: center;
 font-family: monospace;
 font-style: italic;
 }
+
+.description p{
+  font-size: 30px;
+  text-align: center;
+  font-family: monospace;
+  font-style: italic;
+}
