--- a/css/styles.css
+++ b/css/styles.css
@@ -11,3 +11,8 @@ font-style: italic;
   font-family: monospace;
   font-style: italic;
 }
+
+.description{
+  background-color: black;
+  color:white;
+}
