--- a/css/styles.css
+++ b/css/styles.css
@@ -16,3 +16,23 @@ font-style: italic;
   background-color: black;
   color:white;
 }
+
+.rules h3{
+  text-align: center;
+  font-size: 40px;
+  font-family: cursive;
+  font-style: italic;
+}
+
+.rules ul li{
+  text-align: center;
+  font-size: 20px;
+  font-family: monospace;
+  font-style: italic;
+
+}
+
+.rules li{
+ text-align: center;
+ margin-left: 300px;
+}
