--- a/css/styles.css
+++ b/css/styles.css
@@ -3,6 +3,7 @@ font-size: 100px;
 text-align: center;
 font-family: monospace;
 font-style: italic;
+background-color: grey;
 }
 
 .description p{
@@ -29,7 +30,6 @@ font-style: italic;
   font-size: 20px;
   font-family: monospace;
   font-style: italic;
-
 }
 
 body{
