add some correction

--- a/css/styles.css
+++ b/css/styles.css
@@ -65,3 +65,7 @@ flex-direction: column;
   background-image: url(/home/david/Documents/pig-dice/images/y.jpg);
   height: 100vh;
 }
+
+.header h5{
+  font-size: 30px;
+}
